# uBabel

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_zb.csv  screenlog.0.1  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  sdkconfig.esp32  sdkconfig.esp32c6  sdkconfig.esp32s3  sdkconfig.esp32s3.supermini  sdkconfig.m5core
components/: README.md  adc_hal  babel_network  dht11  gpio_hal  i2c_hal  iperf_hal  loudness_sensor  mem_check  micro_babel_comm  micro_babel_common_events  micro_babel_event  micro_babel_network  micro_babel_proto_manager  mma7660  paj7620  proto_iot_control  proto_simple_overlay  tca9548  tcp_udp
components/bluetooth/: CMakeLists.txt  Kconfig.projbuild  ble_central.c  ble_central.h  ble_peer_utils.c  ble_peripheral.c  ble_peripheral.h  ble_print_utils.c  ble_utils.h  bt_host.c  bt_host.h  gatt_server.c  gatt_server.h
components/coexistence/: CMakeLists.txt  bluetooth.c  bluetooth.h  board.h  coexistence.c  coexistence.h
components/dht11/: CMakeLists.txt  dht11.c  dht11.h  idf_component.yml
components/esp_lcd_ili9342/: CMakeLists.txt  esp_lcd_ili9342.c
components/esp_lora/: CMakeLists.txt  esp_lora.c  esp_lora.cpp  esp_lora.h  esp_lora_receiver.c  esp_lora_sender.c
components/lvgl_tardis_ui/: CMakeLists.txt  lvgl_tardis_widget.c  lvgl_tardis_widget.h
components/lvgl_ui/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_camera_widget.c  lvgl_flex_layout.c  lvgl_lora_receiver_widget.c  lvgl_lora_sender_widget.c  lvgl_messenger_widget.c  lvgl_tardis_widget.c  lvgl_temperature_widget.c  lvgl_ui.h
components/lvgl_ui/include/: lvgl_camera_widget.h  lvgl_flex_layout.h  lvgl_lora_receiver_widget.h  lvgl_lora_sender_widget.h  lvgl_lora_widget.h  lvgl_messenger_widget.h  lvgl_tardis_widget.h  lvgl_temperature_widget.h
components/spi_lcd_touch/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_demo_ui.c  lvgl_flex_layout.c  lvgl_flex_ui.c  lvgl_messenger_widget.c  lvgl_temp_bar_ui.c  lvgl_temperature_widget.c  lvgl_ui.h  spi_lcd_touch.c  spi_lcd_touch.h
components/spi_manager/: CMakeLists.txt  spi_manager.c  spi_manager.h
components/ui_event_manager/: CMakeLists.txt  idf_component.yml  ui_event_manager.c  ui_event_manager.h
components/ui_manager/: CMakeLists.txt  idf_component.yml  ui_event_monitor.c  ui_event_monitor.h  ui_manager.c  ui_manager.h
components/zigbee/: CMakeLists.txt  idf_component.yml  light_driver.c  light_driver.h  switch_driver.h  ubabel_zigbee_proto.h  zb_coordinator.c  zb_coordinator.h  zb_end_device.c  zb_end_device.h  zcl_utility.h  zigbee.c  zigbee.h
esp_peripherals/: adc_hal  bmp280  dht11  gpio_hal  i2c_hal  lcd16x2  lora  loudness_sensor  mma7660  paj7620  pcf8574  spi_hal  tca9548  time_hal
esp_peripherals/camera/: CMakeLists.txt  camera.c  camera.h  idf_component.yml
esp_peripherals/esp32c6_buttons/: CMakeLists.txt  esp32c6_buttons.c  esp32c6_buttons.h
esp_peripherals/esp_lora/: CMakeLists.txt  esp_lora.c  esp_lora.h  esp_lora_receiver.c  esp_lora_sender.c  idf_component.yml  lora_types.h
esp_peripherals/m5_buttons/: CMakeLists.txt  m5_buttons.c  m5_buttons.h
esp_peripherals/sd_card/: CMakeLists.txt  idf_component.yml  sd_card.c  sd_card.h
include/: lwipopts.h
lib/: CMakeLists.txt
lib/adc_hal/: CMakeLists.txt  adc_hal.c  adc_hal.cmake  adc_hal.h
lib/app/: CMakeLists.txt  app.c  app.cmake  app.h
lib/babel_network/: CMakeLists.txt  babel_network.cmake  network_config.c  network_config.h  network_events.h  network_manager.c  network_platform.c  network_platform.h
lib/bitmap_fonts/: bitmap_fonts.cmake  bitmap_fonts.hpp
lib/dht11/: dht11.c
lib/gpio_hal/: gpio_hal.c  gpio_hal.h
lib/hershey_fonts/: hershey_fonts.cmake  hershey_fonts.cpp
lib/i2c_hal/: CMakeLists.txt  i2c_hal.c  i2c_hal.h
lib/iperf_hal/: CMakeLists.txt  idf_component.yml  iperf.cmake  iperf_hal.h  iperf_hal_esp32.c  iperf_hal_pico.c
lib/loudness_sensor/: loudness_sensor.h
lib/mem_check/: CMakeLists.txt  mem_check.c  mem_check.cmake  mem_check.h
lib/micro_babel_comm/: CMakeLists.txt  comm_manager.c  comm_manager.h  message.c  message.h  message_parse.h  micro_babel_comm.cmake
lib/micro_babel_comm backup/: comm_manager.c  comm_manager.h  message_parse.c
lib/micro_babel_common_events/: CMakeLists.txt  common_events.c  common_events.h  micro_babel_common_events.cmake
lib/micro_babel_event/: CMakeLists.txt  event.c  event.h  event_dispatcher.c  event_dispatcher.h  micro_babel_event.cmake
lib/micro_babel_event/events/: lora_events.h
lib/micro_babel_network/: CMakeLists.txt  micro_babel_network.cmake  network_config.c  network_events.h  network_hal.c  network_hal.h  network_hal_esp32.c  network_hal_pico.c  network_manager.c  network_manager.h  network_platform.c  network_platform.h
lib/micro_babel_proto_manager/: CMakeLists.txt  micro_babel_proto_manager.cmake  proto_manager.c  proto_manager.h
lib/mma7660/: mma7660.cmake
lib/paj7620/: paj7620.cmake
lib/pico_buttons/: CMakeLists.txt  pico_buttons.c  pico_buttons.cmake  pico_buttons.h
lib/pico_display_28/: pico_display_28_demo.cpp
lib/pico_graphics/: pico_graphics.cmake  pico_graphics.hpp
lib/pico_scroll/: pico_scroll.cmake  pico_scroll.cpp  pico_scroll.h
lib/pico_tasks/: CMakeLists.txt  pico_tasks.c  pico_tasks.cmake  pico_tasks.h
lib/pico_touch_screen/: CMakeLists.txt  ili9341.h  lcd_assert.c  lcd_assert.h  msp2807_touch.h  pico_touch_screen.c  pico_touch_screen.cmake  pico_touch_screen.h
lib/pico_unicorn/: CMakeLists.txt  pico_unicorn.cpp  pico_unicorn.h
lib/st7789/: st7789.hpp
lib/tca9548/: tca9548.h
lib/tcp_udp/: CMakeLists.txt  tcp.c  tcp.cmake  tcp.h  udp.c  udp.cmake  udp.h
m5stack/m5_lora/: esp_hal.h  (+5 more)
main/: CMakeLists.txt  esp32_main.c  idf_component.yml  m5_main.c  pico_main.c  pico_scroll_wrapper.cpp  pico_scroll_wrapper.h  pico_unicorn_wrapper.cpp  pico_unicorn_wrapper.h
peripherals/: CMakeLists.txt
protocols/: CMakeLists.txt
shared/: platform.h
src/: CMakeLists.txt  freertos_test.cpp
(+92 files in other folders)
