add_subdirectory(pico_graphics)
add_subdirectory(pico_scroll)
add_subdirectory(pico_unicorn)
add_subdirectory(pico_buttons)
add_subdirectory(hershey_fonts)
add_subdirectory(bitmap_fonts)
add_subdirectory(micro_babel_proto_manager)
add_subdirectory(micro_babel_network)
add_subdirectory(micro_babel_event)
add_subdirectory(micro_babel_comm)
add_subdirectory(micro_babel_common_events)
add_subdirectory(tcp_udp)
add_subdirectory(pico_touch_screen)
add_subdirectory(mem_check)
add_subdirectory(gpio_hal)
#add_subdirectory(adc_hal)
add_subdirectory(dht11)
